add seven pages

--- a/anotherpuppy.html
+++ b/anotherpuppy.html
@@ -5,9 +5,13 @@
 </head>
 <body>
 
-<h1>number two puppy</h1>
+<h1>Puppy Number Two</h1>
 
-<a href="index.html">go back</a>
+<a href="index.html">back</a>
+<br>
+<br>
+<a href="lastone.html">next puppy</a>
+
 <br>
 
 <img src="puppy2.jpg" alt="Grey pit" style="width:500px;height:600px;">
