--- a/lastone.html
+++ b/lastone.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 
-<h1>number three of four puppies</h1>
+<h1>Puppies Number Three</h1>
 <br> 
-<a href="index.html">home</a>
+<a href="anotherpuppy.html">back</a>
+<br>
+<a href="grownpit.html">Next</a>
 <br>
 
 <img src="puppy3.jpg" alt="spotty"style="width:600px;height:380px;">
