--- a/meme.html
+++ b/meme.html
@@ -1,21 +1,37 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-<title>pitbull puppies</title>
+<title>navigation</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+ <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
 </head>
 <body>
 
-<h1>Pitbull Meme</h1>
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+ <ul class="navbar-nav">
+ 	<li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
+	<li class="nav-item"><a class="nav-link" href="glitch.html">glitch</a></li>
+	<li class="nav-item"><a class="nav-link" href="meme.html">meme</a></li>
+    <li class="nav-item"><a class="nav-link" href="minecraft.html">minecraft</a>      </li>
+    <li class="nav-item"><a class="nav-link" href="netart.html">net-art</a></li>
+    <li class="nav-item"><a class="nav-link" href="code-as-art.html">code-art</a></li>
+    <li class="nav-item"><a class="nav-link" href="ai.html">ai</a></li>
+</ul> 
+</nav>
 
-<a href="society.html"> back</a>
-<br>
-<br>
-<a href="villian.html">next</a>
-
-<br>
-<img src="pitmeme.jpg" alt="Grey pit" style="width:600px;height:500px;">
-
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non ligula eu dolor euismod cursus. Aliquam erat volutpat. Praesent mollis, enim eu congue venenatis, risus ante aliquam risus, vitae cursus ex metus vitae lectus. Curabitur ipsum elit, hendrerit eget quam gravida, molestie dictum mauris. Proin ornare diam eu metus sodales efficitur. Donec tellus sem, mollis a arcu a, ultrices commodo lacus. Phasellus at imperdiet metus. Praesent malesuada nec odio rhoncus sagittis. Pellentesque consectetur sem molestie, cursus dui sed, molestie neque. Aliquam sagittis velit quis nunc rhoncus, ac mattis nibh sollicitudin. Morbi mi ligula, malesuada ut condimentum non, viverra vitae orci. Nullam fermentum tortor lorem, non fermentum lorem mollis sit amet. Quisque vitae dictum dui. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
+<img class="img-fluid mx-auto d-block" src="meme.jpg" alt="dogs playing poker">
+<br><br>
+<p> This meme consists of..</p>
 </body>
 </html>
