--- a/glitch.html
+++ b/glitch.html
@@ -29,13 +29,16 @@
     <li class="nav-item"><a class="nav-link" href="ai.html">ai</a></li>
 </ul> 
 </nav>
+<br><br>
+<h2 class="text-center"> Glitch Art</h2>  
+<br><br>
 <img class="img-fluid mx-auto d-block" src="glitch2.jpg" alt="dog">
 <br><br>
-<p> I created this glitch art...</p>
+<p class="text-center lead"> In this glitch art I wanted to incorporate a large basic dog photo make it with a twist. I liked the bright green and yellow colors and wanted to emphasize the dog more by creating repetition with the face.</p>
 <br>
 <br>
 <img class="img-fluid mx-auto d-block" src="glitch1.jpg" alt="sunflower" style="width:400px;height:600px;">
 <br><br>
-<p> I created this glitch art...</p>
+<p class="text-center lead"> This glitch art is made from one of my sunflower photos and I wanted to use this image also because of the bright colors. Sunflowers are already bright so I wanted to change the image and enhance the reds and yellows.</p>
 </body>
 </html>
