--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     <li class="nav-item"><a class="nav-link" href="ai.html">ai</a></li>
 </ul> 
 </nav>
-
-<p>home page</p>
-
+<br><br>
+<h2 class="text-center"> About me</h2>  
+<img class="img-fluid mx-auto d-block" src="me.jpg" alt="Celyssa" style="width:500px;height:400px;">
+<br>
+<p class="text-center lead"> I am currently attending SJSU with a study in Photography. When I am not doing photoshoot I spend most of my free time with friends and family. I enjoy traveling to new places and experiencing new things. My main goal in life is to accomplish anything I can, doesn't matter if its big or small as long as I am happy with it.</p>
 </body>
 </html>
