--- a/meme.html
+++ b/meme.html
@@ -29,9 +29,12 @@
     <li class="nav-item"><a class="nav-link" href="ai.html">ai</a></li>
 </ul> 
 </nav>
-
-<img class="img-fluid mx-auto d-block" src="meme.jpg" alt="dogs playing poker">
 <br><br>
-<p> This meme consists of..</p>
+<h2 class="text-center"> Meme Mashup</h2>  
+<br><br>
+<img class="img-fluid text-center mx-auto d-block" src="meme.jpg" alt="dogs playing poker">
+<br><br>
+<p class="text-center lead">This meme consists is made up of an older classic painting, Dogs Playing Poker. I tied it into a more modern day situation that we use which is Zoom. My intentions of this meme was for someone to get a quick chuckle.</p>
+
 </body>
 </html>
