--- a/netart.html
+++ b/netart.html
@@ -29,16 +29,11 @@
     <li class="nav-item"><a class="nav-link" href="ai.html">ai</a></li>
 </ul> 
 </nav>
+<br><br>
+<h2 class="text-center"> Net-Art</h2>  
+  <button type="button"class="btn btn-link text-center">Link</button file:///Users/celyssaaguilar/Downloads/github%20netart/index.html> 
 
-<br><br>
-<h2 class="text-center"> Minecraft Art</h2>  
-<br><br>
-<img class="img-fluid mx-auto d-block" src="minecraft1.jpg" alt="camera">
-<br><br>
-<p class="text-center lead"> I created a camera sculpture in Minecraft because it is a huge symbolization in the photography culture. Cameras are what makeup photography. Although the sculpture is very simple I am proud of how it turned out.</p>
+<p class="text-center lead"> This Net Art project helped increase my creativity with the web. It made me feel accomplished and gave me more confidence with my ability to finish things. </p>
 
-<br><br>
-<img class="img-fluid mx-auto d-block" src="minecraft2.jpg" alt="camera">
-<br><br>
 </body>
 </html>
