--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>navigation</title>
+<title>portfolio</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
  <!-- Latest compiled and minified CSS -->
@@ -27,6 +27,9 @@
     <li class="nav-item"><a class="nav-link" href="netart.html">net-art</a></li>
     <li class="nav-item"><a class="nav-link" href="code-as-art.html">code-art</a></li>
     <li class="nav-item"><a class="nav-link" href="ai.html">ai</a></li>
+    <li class="nav-item"><a class="nav-link" href="final.html">final</a></li>
+  </li>
+
 </ul> 
 </nav>
 <br><br>
