--- a/codeart.html
+++ b/codeart.html
@@ -34,8 +34,8 @@
 </nav>
 <br><br>
 <h2 class="text-center"> Self Portrait</h2>  
-<img class="img-fluid mx-auto d-block" src="selfport.jpg" alt="Celyssa" style="width:500px;height:600px;">
+<img class="img-fluid mx-auto d-block" src="selfport.jpg" alt="Celyssa" style="width:500px;height:500px;">
 <br>
-<p class="text-center lead"> I made my self portrait out of pjs5. This was probably the most difficult forms of art that I have done. After completing it I was very relieved and appreciative of my work and what I can accomplish. </p>
+<p class="text-center lead"> I am currently attending SJSU with a study in Photography. When I am not doing photoshoot I spend most of my free time with friends and family. I enjoy traveling to new places and experiencing new things. My main goal in life is to accomplish anything I can, doesn't matter if its big or small as long as I am happy with it.</p>
 </body>
 </html>
