--- a/final.html
+++ b/final.html
@@ -45,6 +45,6 @@
 <img class="img-fluid mx-auto d-block" src="pg7.jpg" alt="Celyssa" style="width:600px;height:400px;">
 <img class="img-fluid mx-auto d-block" src="back.jpg" alt="Celyssa" style="width:600px;height:400px;">
 <br>
-<p class="text-center lead"> For my final project I wanted to work with Spade-coco because I enjoyed it so much. I created a book for my niece that is turning one on December 24th hence why it's a holiday book. I wanted to create something meaningful and something I can have a physical copy of. </p>
+<p class="text-center lead"> For my final project I wanted to work with Spade-coco because I enjoyed it so much. I used spade-coco to create the scenery for the snowman. Then I went in with Photoshop to create the snowman and the accessories.I made this book for my niece that is turning one on December 24th hence why it's a holiday book. I wanted to create something meaningful and something I can have a physical copy of. </p>
 </body>
 </html>
