--- a/netart.html
+++ b/netart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>navigation</title>
+<title>portfolio</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
  <!-- Latest compiled and minified CSS -->
@@ -27,13 +27,15 @@
     <li class="nav-item"><a class="nav-link" href="netart.html">net-art</a></li>
     <li class="nav-item"><a class="nav-link" href="code-as-art.html">code-art</a></li>
     <li class="nav-item"><a class="nav-link" href="ai.html">ai</a></li>
+    <li class="nav-item"><a class="nav-link" href="final.html">final</a></li>
+  </li>
+
 </ul> 
 </nav>
 <br><br>
-<h2 class="text-center"> Net-Art</h2>  
-  <button type="button"class="btn btn-link text-center">Link</button file:///Users/celyssaaguilar/Downloads/github%20netart/index.html> 
-
-<p class="text-center lead"> This Net Art project helped increase my creativity with the web. It made me feel accomplished and gave me more confidence with my ability to finish things. </p>
-
+<h2 class="text-center"> Net Art Website</h2>  
+<img class="img-fluid mx-auto d-block" src="website.jpg" alt="Celyssa" style="width:400px;height:600px;">
+<br>
+<p class="text-center lead"> I created this website based on pitbulls and how society portrays them. It is something I care about dearly because I have one myself and it is very difficult for me as well as them because of the aggression stereotype they hold. I believe all dogs have innocences and its all in the owner that has the power to make aggression. This can be similar to how a parent raising their child.</p>
 </body>
 </html>
